<resources>
    <string name="app_name">final</string>
    <string name="final_exam_3175">Final Exam 3175</string>
    <string name="by_rishabh_banerjee">By Rishabh Banerjee</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="course">Course</string>
    <string name="_3175">3175</string>
    <string name="_3276">3276</string>
    <string name="_3377">3377</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="professor_name">Professor Name</string>
    <string name="name">Name</string>
    <string name="name_domain_com">name@domain.com</string>
    <string name="set_end_time">Set End Time</string>
    <string name="set_start_time">Set Start time</string>
</resources>